samples/_failures_safe/1761466454_c3c989_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_022130e6.c: In function ‘main’:
./samples/SAFE/__tmp_022130e6.c:139:5: error: expected declaration or statement at end of input
  139 |     printf("Matrix Operations Program\n");
      |     ^~~~~~
